styles.css
body { padding: 0; margin: 0; }
html, body, #map { height: 100%; }
.leaflet-popup-content .name {
  font-weight: bold;
  font-size: 1.2em;
  line-height: 2.1;
}

/** loading */

.app.loading.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0.5;
  background: #000;
  filter: alpha(opacity=50);
}

.app.loading.container {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
}


/** modal */

.app.modal.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0.5;
  background: #000;
  filter: alpha(opacity=50);
}

.app.modal.container {
  position: absolute;
  background: url(tint20.png) 0 0 repeat;
  background: rgba(0, 0, 0, 0.2);
  border-radius: 14px;
  padding: 8px;
}
.app.modal.content {
  border-radius: 8px;
  background: #fff;
  padding: 20px;
}
.app.modal.close {
  position:absolute;
  background:url(close.png) 0 0 no-repeat;
  width:24px;
  height:27px;
  display:block;
  text-indent:-9999px;
  top:-7px;
  right:-7px;
}

/** about modal */

@media all and (min-width: 600px) {
  .showNextTime {
    float: right;
  }
}
@media all and (max-width: 599px) {
  .showNextTime {
    padding-top: 1em;
    display: block !important;
  }
}

/* add station dialog */

.app.add-station.dialog {
  position: absolute;
  background: url(tint20.png) 0 0 repeat;
  background: rgba(0, 0, 0, 0.2);
  border-radius: 14px;
  padding: 8px;
}

.add-station.content {
  border-radius: 8px;
  background: #fff;
  padding: 20px;
}

.add-station .anchor {
  position: absolute;
  background-image: url("waterdropred.png");
  height: 40px;
  width: 29px;
}
.add-station.tl .anchor {
  bottom: 0px;
  right: -15px;
}
.add-station.tr .anchor {
  bottom: 0px;
  left: -15px;
}
.add-station.bl .anchor {
  top: -40px;
  right: -15px;
}
.add-station.br .anchor {
  top: -40px;
  left: -15px;
}

